--- a/front-end/src/styles/main.css
+++ b/front-end/src/styles/main.css
@@ -53,6 +53,8 @@ main {
 }
 
 button {
+    background: transparent;
+    border: none;
     cursor: pointer;
     transition: 0.2s ease;
     border-radius: 0.3rem;
